backends/drm: adapt the color factors to the target colorspace

Otherwise the effect of night color is much bigger in larger colorspaces.
This is mostly a workaround, but the better solution (adapting the color
temperature of the colorspace instead) will have to wait for 6.1

BUG: 483801
FIXED-IN: 6.0.5
(cherry picked from commit 9fef6380d4d4de7d20408861db8708505bec8de0)